# clash-rule-providers

./: .gitignore  .pdm-python  .pdm.toml  README.md  _build_config.py  build-config.py  build.py  build_clash_demo.bat  clash_api.py  config.template.yaml  listen_file_change.py  push_clash_demo.bat  pyproject.toml  run_clash_demo.bat
