[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.1.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "hxse", email = "narutohy@163.com"},
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28.1",
    "watchdog>=3.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
